# tinyai-llmops

./: .dockerignore  Dockerfile  Makefile  README.md  app.py  chainlit.md  pyproject.toml
.chainlit/: config.toml
