[tool.poetry]
name = "env-w1s1"
version = "0.1.0"
description = "env for week 1 of course LLMOps"
authors = ["JuanOvalle"]

[tool.poetry.dependencies]
python = "3.11.6"
openai = "^1.3.6"
chainlit = "^0.7.700"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
